--- a/priyadarshini1/python/python.html
+++ b/priyadarshini1/python/python.html
@@ -114,6 +114,9 @@ footer {
         <a href="python_syllabus.html" class="syllabus-btn">Syllabus</a>
         <br>
         <a href="python_notes.html" class="syllabus-btn">Notes</a>
+        <br>
+        
+        <a href="python_prac.html" class="syllabus-btn">Practicals (EE/EJ)</a>
         
     </div>
 </main>
