--- a/priyadarshini1/python/python_syllabus.html
+++ b/priyadarshini1/python/python_syllabus.html
@@ -249,7 +249,7 @@
         <header>
             <h1>PYTHON PROGRAMMING</h1>
             <p>Course Code: 314004 | Semester: Fourth</p>
-            <p>Cloud Computing • Big Data • Computer Engineering</p>
+            <p>Computer Engineering</p>
         </header>
         
         <!-- Unit 1 -->
