--- a/priyadarshini1/python/python_prac.html
+++ b/priyadarshini1/python/python_prac.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -167,9 +168,9 @@
 <div class="monocle-frame">
     <div class="title-section">
         <h1>
-            <span class="glasses-icon-big">👓</span> 
+            <span class="glasses-icon-big"></span> 
             Python Practicals 
-            <span class="glasses-icon-big" style="transform: scaleX(-1);">👓</span>
+            <span class="glasses-icon-big" style="transform: scaleX(-1);"></span>
         </h1>
         <span class="badge-msbte">Sub code: 313011</span>
     </div>
@@ -177,13 +178,13 @@
 
     <table class="practical-table">
         <thead class="table-header">
-            <tr><th>#</th><th>LLO/CO</th><th>Star practical description</th><th>Expanded Python code with comments</th></tr>
+            <tr><th>#</th><th>Star practical description</th><th>Expanded Python code with comments</th></tr>
+
         </thead>
         <tbody>
             <!-- 1.b ★ -->
             <tr class="practical-row star-highlight">
                 <td>1b</td>
-                <td><span class="llo-badge">LLO1.1 · CO1</span></td>
                 <td><strong>★ display message</strong> <br> after IDE install</td>
                 <td>
                     <div class="code-snippet"># Practical 1.b : First program - display message with user input
@@ -208,7 +209,6 @@ print("👉 You can now run any Python script.\n")</div>
             <!-- 2.a ★ series/parallel -->
             <tr class="practical-row star-highlight">
                 <td>2a</td>
-                <td><span class="llo-badge">LLO2.1 · CO1</span></td>
                 <td><strong>★ equivalent resistance</strong> <br> series & parallel (R1,R2,R3)</td>
                 <td>
                     <div class="code-snippet"># Practical 2.a : Calculate equivalent resistance (series & parallel)
@@ -246,7 +246,6 @@ else:
             <!-- 2.b ★ ohm's law -->
             <tr class="practical-row star-highlight">
                 <td>2b</td>
-                <td><span class="llo-badge">LLO2.1 · CO1</span></td>
                 <td><strong>★ Ohm’s law: V = I·R</strong></td>
                 <td>
                     <div class="code-snippet"># Practical 2.b : Calculate voltage using Ohm's law V = I * R
@@ -275,7 +274,6 @@ print(f"   Power dissipated = {P:.3f} W")</div>
             <!-- 4.a ★ radio frequency bands -->
             <tr class="practical-row star-highlight">
                 <td>4a</td>
-                <td><span class="llo-badge">LLO4.1 · CO2</span></td>
                 <td><strong>★ RF bands using if..elif ladder</strong></td>
                 <td>
                     <div class="code-snippet"># Practical 4.a : Identify radio frequency band from frequency input
@@ -319,7 +317,6 @@ elif freq >= 1e3:
             <!-- 4.b ★ resistor color code (switch/dict) -->
             <tr class="practical-row star-highlight">
                 <td>4b</td>
-                <td><span class="llo-badge">LLO4.1 · CO2</span></td>
                 <td><strong>★ resistor color code decoder</strong></td>
                 <td>
                     <div class="code-snippet"># Practical 4.b : Decode 4-band resistor color code (simulated switch with dict)
@@ -367,7 +364,6 @@ else:
             <!-- 5a ★ while & do-while -->
             <tr class="practical-row star-highlight">
                 <td>5a</td>
-                <td><span class="llo-badge">LLO5.1 · CO2</span></td>
                 <td><strong>★ while / do-while emulation</strong></td>
                 <td>
                     <div class="code-snippet"># Practical 5.a : Demonstrate while loop and emulate do-while
@@ -404,7 +400,6 @@ while True:
             <!-- 5b ★ for loop demos (pattern/table/palindrome) -->
             <tr class="practical-row star-highlight">
                 <td>5b</td>
-                <td><span class="llo-badge">LLO5.1 · CO2</span></td>
                 <td><strong>★ for loop: pattern, table, palindrome</strong></td>
                 <td>
                     <div class="code-snippet"># Practical 5.b : for loop demonstrations
@@ -441,7 +436,6 @@ print(f"   {n}! = {fact}")</div>
             <!-- 6 ★ list operations -->
             <tr class="practical-row star-highlight">
                 <td>6</td>
-                <td><span class="llo-badge">LLO6.1 · CO3</span></td>
                 <td><strong>★ list CRUD</strong></td>
                 <td>
                     <div class="code-snippet"># Practical 6 : List operations - Create, Access, Update, Delete
@@ -485,7 +479,6 @@ print("   Final list:", fruits)</div>
             <!-- 9 ★ dictionary CRUD -->
             <tr class="practical-row star-highlight">
                 <td>9</td>
-                <td><span class="llo-badge">LLO9.1 · CO3</span></td>
                 <td><strong>★ dictionary: CRUD + loop</strong></td>
                 <td>
                     <div class="code-snippet"># Practical 9 : Dictionary operations (Create, Read, Update, Delete, Loop)
@@ -534,7 +527,6 @@ if "name" in student:
             <!-- 10a ★ math built-in -->
             <tr class="practical-row star-highlight">
                 <td>10a</td>
-                <td><span class="llo-badge">LLO10.1 · CO4</span></td>
                 <td><strong>★ math built‑in functions</strong></td>
                 <td>
                     <div class="code-snippet"># Practical 10.a : Using math module built-in functions
@@ -572,7 +564,6 @@ print(f"   factorial(5) = {math.factorial(5)}")</div>
             <!-- 10b ★ string built-in -->
             <tr class="practical-row star-highlight">
                 <td>10b</td>
-                <td><span class="llo-badge">LLO10.1 · CO4</span></td>
                 <td><strong>★ string built‑in functions</strong></td>
                 <td>
                     <div class="code-snippet"># Practical 10.b : String built-in methods demonstration
@@ -615,7 +606,6 @@ print(f"   startswith('  Py')?    : {s.startswith('  Py')}")</div>
             <!-- 11a factorial ★ -->
             <tr class="practical-row star-highlight">
                 <td>11a</td>
-                <td><span class="llo-badge">LLO11.1 · CO4</span></td>
                 <td><strong>★ factorial using function</strong></td>
                 <td>
                     <div class="code-snippet"># Practical 11.a : Recursive & iterative factorial functions
@@ -653,7 +643,6 @@ else:
             <!-- 11b swap ★ -->
             <tr class="practical-row star-highlight">
                 <td>11b</td>
-                <td><span class="llo-badge">LLO11.1 · CO4</span></td>
                 <td><strong>★ swapping two variables</strong></td>
                 <td>
                     <div class="code-snippet"># Practical 11.b : Swap two variables (multiple techniques)
@@ -696,7 +685,6 @@ print(f"\nOriginal still: x = {x}, y = {y}")</div>
             <!-- 13 ★ built-in module -->
             <tr class="practical-row star-highlight">
                 <td>13</td>
-                <td><span class="llo-badge">LLO13.1 · CO5</span></td>
                 <td><strong>★ built-in module: math, statistics, random</strong></td>
                 <td>
                     <div class="code-snippet"># Practical 13 : Built-in modules (math, statistics, random)
@@ -740,7 +728,6 @@ print(f"\n🔐 secrets token_hex(4)  : {secrets.token_hex(4)}")</div>
             <!-- 15 ★ NumPy array -->
             <tr class="practical-row star-highlight">
                 <td>15</td>
-                <td><span class="llo-badge">LLO15.1 · CO5</span></td>
                 <td><strong>★ NumPy array ops (create, access, update)</strong></td>
                 <td>
                     <div class="code-snippet"># Practical 15 : NumPy package - array creation, access, update
@@ -793,19 +780,9 @@ print("   dtype of arr1:", arr1.dtype)</div>
 
     <!-- star summary -->
     <hr>
-    <div style="background: rgba(255,255,240,0.6); border-radius: 60px; padding: 2rem; margin: 2rem 0;">
-        <div style="font-size: 2rem; font-weight: 700; margin-bottom: 1rem;">⭐ 14 star practicals — all with massive comments</div>
-        <div style="display: flex; gap: 1.8rem; flex-wrap: wrap;">
-            <span class="llo-badge">CO1</span> 1b,2a,2b &nbsp;&nbsp; <span class="llo-badge">CO2</span> 4a,4b,5a,5b &nbsp;&nbsp; <span class="llo-badge">CO3</span> 6,9 &nbsp;&nbsp; <span class="llo-badge">CO4</span> 10a,10b,11a,11b &nbsp;&nbsp; <span class="llo-badge">CO5</span> 13,15
-        </div>
-    </div>
+    
 
-    <div class="footer-note">
-        <span>👓 each star code is EXPLODED with comments & multiple cases</span>
-        <span>🐍 ready to paste in IDE</span>
-        <span>⚡ 2026 · MSBTE 313011</span>
-    </div>
 </div>
-<div style="text-align: center; margin-top: 1.5rem; font-size: 2.5rem; opacity: 0.5;">⌇ ⌇ ⌇</div>
+<div style="text-align: center; margin-top: 1.5rem; font-size: 2rem; opacity: 0.5;">©Kaustubh Ramteke</div>
 </body>
 </html>
