--- a/priyadarshini1/emerging-trends/emerging-trends.html
+++ b/priyadarshini1/emerging-trends/emerging-trends.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -96,12 +97,12 @@ footer {
     background: #FF8500;
     text-align: center;
     padding: 12px 0;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 600;
-    color: #000;
-    letter-spacing: 0.5px;
+    color: black;
+    letter-spacing: 0.6px;
     box-shadow: 0 -4px 15px rgba(0,0,0,0.6);
-    backdrop-filter: blur(8px);
+    backdrop-filter: blur(2px);
     border-top: 2px solid rgba(0,0,0,0.15);
     transition: all 0.3s ease;
 }
