--- a/priyadarshini1/emerging-trends/unit3.html
+++ b/priyadarshini1/emerging-trends/unit3.html
@@ -189,13 +189,18 @@ body {
 }
 
 .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: var(--card);
     text-align: center;
-    margin: 50px 0 20px;
+    padding: 12px 0;
     color: var(--muted);
-    padding-top: 20px;
     border-top: 1px solid var(--border);
+    box-shadow: 0 -2px 10px rgba(0,0,0,0.08);
+    z-index: 1000;
 }
-
 /* Responsive design */
 @media (max-width: 768px) {
     .question-grid {
@@ -917,7 +922,6 @@ body {
 
     <div class="footer">
         <p>© 2026 Kaustubh Ramteke</p>
-        <p>Based on study material from nirali prakashan</p>
     </div>
 </div> <!-- Closes .container -->
 
