--- a/priyadarshini1/emerging-trends/unit4.html
+++ b/priyadarshini1/emerging-trends/unit4.html
@@ -153,12 +153,18 @@ body {
 }
 
 .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: var(--card);
     text-align: center;
     font-size: 14px;
     color: var(--muted);
-    margin: 48px 0 24px;
-    padding-top: 24px;
+    padding: 14px 0;
     border-top: 1px solid rgba(0,0,0,0.1);
+    box-shadow: 0 -4px 12px rgba(0,0,0,0.3);
+    z-index: 1000;
 }
 
 @media (max-width: 768px) {
