--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -188,57 +189,85 @@ h1::after {
 /* BUTTONS */
 .links { margin-top: 20px; }
 
+/* ===== CREATIVE ROYAL GLASS BUTTON ===== */
 .button-35 {
     position: relative;
-    overflow: hidden;
-    border: none;
     padding: 15px 36px;
     margin: 12px;
-    font-size: 19px;
+    font-size: 18px;
     font-weight: 700;
-    border-radius: 999px;
+    border-radius: 50px;
     cursor: pointer;
-    letter-spacing: 0.5px;
-    color: #111;
-    background: #FFD000;
+    letter-spacing: 1px;
+    border: none;
+    overflow: hidden;
+
+    color: white;
+    background: rgba(255, 255, 255, 0.08);
+    backdrop-filter: blur(8px);
+
     box-shadow:
-        0 8px 18px rgba(0,0,0,0.35),
-        0 2px 0 rgba(0,0,0,0.2) inset;
-    transition: 
-        transform 0.25s ease,
-        box-shadow 0.25s ease,
-        background 0.3s ease;
+        0 8px 20px rgba(0,0,0,0.4);
+
+    transition: all 0.35s ease;
 }
 
+/* Gradient animated border */
 .button-35::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 50px;
+    padding: 2px;
+    background: linear-gradient(270deg, #ff0080, #ff8c00, #40e0d0, #ff0080);
+    background-size: 400% 400%;
+    animation: borderMove 6s linear infinite;
+
+    -webkit-mask:
+        linear-gradient(#000 0 0) content-box,
+        linear-gradient(#000 0 0);
+    -webkit-mask-composite: xor;
+    mask-composite: exclude;
+}
+
+/* Shine sweep */
+.button-35::after {
     content: "";
     position: absolute;
     top: 0;
     left: -100%;
-    width: 60%;
+    width: 50%;
     height: 100%;
     background: linear-gradient(
         120deg,
         transparent,
-        rgba(255,255,255,0.6),
+        rgba(255,255,255,0.4),
         transparent
     );
-    transition: 0.6s ease;
+    transition: 0.7s;
 }
 
+/* Hover Effects */
 .button-35:hover {
-    transform: translateY(-4px);
-    background: #ffc107;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.4);
+    transform: translateY(-6px) scale(1.05);
+    box-shadow:
+        0 15px 35px rgba(64, 224, 208, 0.6);
 }
 
-.button-35:hover::before { left: 130%; }
+.button-35:hover::after {
+    left: 150%;
+}
 
+/* Click effect */
 .button-35:active {
-    transform: translateY(1px);
-    box-shadow: 0 4px 10px rgba(0,0,0,0.4) inset;
+    transform: scale(0.96);
 }
 
+/* Border animation */
+@keyframes borderMove {
+    0% { background-position: 0% 50%; }
+    100% { background-position: 400% 50%; }
+}
 /* FOOTER */
 footer {
     background: #333;
