--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ footer {
 </main>
 
 <footer>
-    © 2026 Kaustubh Ramteke | All Rights Reserved
+    © 2026 Kaustubh Ramteke
 </footer>
 
 <script>
