--- a/priyadarshini1/ppn.html
+++ b/priyadarshini1/ppn.html
@@ -1,5 +1,3 @@
-
-<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -22,6 +20,9 @@ body {
     font-family: system-ui, Arial, sans-serif;
     background: var(--bg);
     color: var(--text);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Top bar */
@@ -48,6 +49,7 @@ body {
     max-width: 1000px;
     margin: auto;
     padding: 16px;
+    flex: 1;
 }
 
 /* Header */
@@ -77,9 +79,9 @@ body {
 /* Card-style button */
 .subject-card {
     background: var(--card);
-    border-radius: 18px;
-    padding: 32px 20px;
-    box-shadow: 0 6px 14px rgba(0,0,0,0.08);
+    border-radius: 128px;
+    padding: 32px 18px;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.1);
     text-align: center;
     text-decoration: none;
     transition: transform 0.25s ease, box-shadow 0.25s ease;
@@ -97,11 +99,12 @@ body {
 }
 
 /* Footer */
+
 .footer {
     text-align: center;
     font-size: 14px;
     color: var(--muted);
-    margin: 36px 0 16px;
+    padding: 20px 0;
 }
 
 /* Desktop */
@@ -124,20 +127,17 @@ body {
 
 <body>
 
-<div class="top-bar">
-</div>
+<div class="top-bar"></div>
 
 <div class="container">
 
-<div class="header">
-    <!-- Logo added here -->
-    <img src="https://kaustubh77rm.github.io/image/Priyadarshini.png"
-     alt="Priyadarshini Logo"
-     class="logo"
-     draggable="false"
-     oncontextmenu="return false;">
-
     <div class="header">
+        <img src="https://kaustubh77rm.github.io/image/Priyadarshini.png"
+             alt="Priyadarshini Logo"
+             class="logo"
+             draggable="false"
+             oncontextmenu="return false;">
+             
         <h1>Priyadarshini College of Engineering (Diploma), Nagpur</h1>
     </div>
 
@@ -161,8 +161,10 @@ body {
 
     </div>
 
-    <div class="footer">© 2026 Kaustubh Ramteke</div>
+</div>
 
+<div class="footer">
+    © 2026 Kaustubh Ramteke
 </div>
 
 </body>
