--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -14,7 +15,7 @@
 body {
     min-height: 100vh;
     font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+    background: linear-gradient(178deg,rgba(9, 0, 171, 1) 0%, rgba(68, 68, 252, 1) 65%, rgba(46, 164, 255, 1) 100%);
     display: flex;
     flex-direction: column;
     position: relative;
@@ -218,10 +219,10 @@ h1::after {
     border: none;
     overflow: hidden;
     color: white;
-    background: rgba(255, 255, 255, 0.08);
+    background: linear-gradient(178deg,rgba(96, 0, 186, 1) 0%, rgba(70, 0, 117, 1) 50%, rgba(45, 0, 89, 1) 100%);
     backdrop-filter: blur(8px);
     box-shadow:
-        0 8px 20px rgba(0,0,0,0.4);
+        0 8px 20px rgba(0,0,0,0.8);
     transition: all 0.35s ease;
 }
 
