--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -14,8 +13,13 @@
 
 body {
     min-height: 100vh;
-    font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(178deg,rgba(9, 0, 171, 1) 0%, rgba(68, 68, 252, 1) 65%, rgba(46, 164, 255, 1) 100%);
+    font-family: 'Montserrat', sans-serif; 
+    background: linear-gradient(
+    160deg,
+    #200122 0%,
+    #6f0000 50%,
+    #ff512f 100%
+);
     display: flex;
     flex-direction: column;
     position: relative;
@@ -219,7 +223,7 @@ h1::after {
     border: none;
     overflow: hidden;
     color: white;
-    background: linear-gradient(178deg,rgba(96, 0, 186, 1) 0%, rgba(70, 0, 117, 1) 50%, rgba(45, 0, 89, 1) 100%);
+    background: linear-gradient(178deg,rgba(74, 0, 143, 1) 0%, rgba(52, 0, 87, 1) 50%, rgba(14, 0, 31, 1) 100%);
     backdrop-filter: blur(8px);
     box-shadow:
         0 8px 20px rgba(0,0,0,0.8);
@@ -284,7 +288,7 @@ h1::after {
 }
 /* FOOTER */
 footer {
-    background: #333;
+    background: black;
     color: white;
     padding: 15px;
     text-align: center;
@@ -294,7 +298,7 @@ footer {
     width: 100%;
     z-index: 100;
     flex-shrink: 0;
-    box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.3);
     border-top: 2px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -355,7 +359,7 @@ footer {
         <button class="button-35" onclick="location.href='projects.html'">Projects</button>
         <button class="button-35" onclick="location.href='contact.html'">Media</button>
         <button class="button-35" onclick="location.href='articles/Column.html'">My Column</button>
-        <button class="button-35" onclick="location.href='priyadarshini1/ppn.html'">Priyadarshini</button>
+        <button class="button-35" onclick="location.href='priyadarshini1/ppn.html'">Subjects</button>
     </div>
 </main>
 
