--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -94,8 +93,10 @@ p {
 }
 
 .info-item {
-    padding: 10px 0;
+    font-size:18px;
+    padding: 15px 1;
     border-bottom: 1px solid #ddd;
+    align-items: center;
 }
 
 .info-item:last-child {
@@ -278,7 +279,7 @@ p {
 }
 
 .song-item:hover {
-    background: linear-gradient(to right, #e8f5e9, transparent);
+background: linear-gradient(94deg,rgba(130, 234, 255, 1) 55%, rgba(255, 255, 255, 1) 100%);
     transform: scale(1.02);
 }
 
@@ -286,7 +287,7 @@ p {
     content: "▶";
     margin-right: 10px;
     font-size: 12px;
-    color: var(--primary);
+    color: blue;
     transition: transform 0.2s ease;
 }
 
@@ -338,11 +339,11 @@ p {
         <ul class="info-list">
             <li class="info-item"><span class="info-label">Full Name</span>Kaustubh Prabhakar Ramteke</li>
             <li class="info-item"><span class="info-label">Hometown</span>Amravati, Maharashtra, India</li>
-            <li class="info-item"><span class="info-label">Current City</span>Nagpur, Maharashtra, India</li>
-            <li class="info-item"><span class="info-label">Languages</span>English, Marathi, Hindi</li>
+            <li class="info-item"><span class="info-label">Current city</span>Nagpur, Maharashtra, India</li>
+            <li class="info-item"><span class="info-label">Languages spoken</span>English, Marathi, Hindi</li>
         </ul>
     </div>
-
+    
     <div class="section">
         <h3>Technical Skills</h3>
         <div class="skills">
