--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
 body {
     min-height: 100vh;
     font-family: 'Montserrat', sans-serif;
-
     background: linear-gradient(
-        160deg,
-        #200122,
-        #6f0000,
-        #ff512f,
-        #200122
+        135deg,
+        #0f2027,
+        #203a43,
+        #2c5364,
+        #1c1c3c,
+        #0f2027
     );
-
     background-size: 400% 400%;
-    animation: gradientMove 12s ease infinite;
+    animation: gradientFlow 12s ease infinite;
 
     display: flex;
     flex-direction: column;
@@ -89,17 +88,15 @@ h1::after {
     }
 }
 
-@keyframes gradientMove {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
+
+@keyframes gradientFlow {
+    0%   { background-position: 0% 50%; }
+    25%  { background-position: 50% 100%; }
+    50%  { background-position: 100% 50%; }
+    75%  { background-position: 50% 0%; }
+    100% { background-position: 0% 50%; }
 }
+
 /* NAME BOX */
 .name-box {
     position: relative;
@@ -240,10 +237,10 @@ h1::after {
     border: none;
     overflow: hidden;
     color: white;
-    background: linear-gradient(178deg,rgba(74, 0, 143, 1) 0%, rgba(52, 0, 87, 1) 50%, rgba(14, 0, 31, 1) 100%);
+    background: rgba(255, 255, 255, 0.08);
     backdrop-filter: blur(8px);
     box-shadow:
-        0 8px 20px rgba(0,0,0,0.8);
+        0 8px 20px rgba(0,0,0,0.4);
     transition: all 0.35s ease;
 }
 
@@ -305,7 +302,7 @@ h1::after {
 }
 /* FOOTER */
 footer {
-    background: black;
+    background: #333;
     color: white;
     padding: 15px;
     text-align: center;
@@ -315,7 +312,7 @@ footer {
     width: 100%;
     z-index: 100;
     flex-shrink: 0;
-    box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.5);
     border-top: 2px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -376,7 +373,7 @@ footer {
         <button class="button-35" onclick="location.href='projects.html'">Projects</button>
         <button class="button-35" onclick="location.href='contact.html'">Media</button>
         <button class="button-35" onclick="location.href='articles/Column.html'">My Column</button>
-        <button class="button-35" onclick="location.href='priyadarshini1/ppn.html'">Subjects</button>
+        <button class="button-35" onclick="location.href='priyadarshini1/ppn.html'">Priyadarshini</button>
     </div>
 </main>
 
